# multiplatform-curses

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile
lib/: Makefile
src/: main.c
